auht and role
